v/0.1.0/_sources/examples/extend/03_custom_datasource.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/extend/03_custom_datasource.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_extend_03_custom_datasource.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_extend_03_custom_datasource.py:


Extending Data Sources
======================

Implementing a custom data source

This example will demonstrate how to extend Earth2Studio by implementing a custom data
source to use in a built in workflow.

In this example you will learn:

- API requirements of data soruces
- Implementing a custom data soruce

.. GENERATED FROM PYTHON SOURCE LINES 34-45

Custom Data Source
------------------
Earth2Studio defines the required APIs for data sources in
:py:class:`earth2studio.data.base.DataSource` which requires just a call function.
For this example, we will consider extending an existing remote data source with
another atmospheric field we can calculate.

The ARCO data source provides the ERA5 dataset in a cloud optimized format, however
it only provides specific humidity. This is a problem for models that may use relative
humidity as an input. Based on ECMWF documentation we can calculate the relative
humidity based on temperature and geo-potential.

.. GENERATED FROM PYTHON SOURCE LINES 47-173

.. code-block:: Python

    from datetime import datetime

    import numpy as np
    import xarray as xr

    from earth2studio.data import ARCO, GFS
    from earth2studio.data.utils import prep_data_inputs
    from earth2studio.utils.type import TimeArray, VariableArray


    class CustomDataSource:
        """Custom ARCO datasource"""

        relative_humidity_ids = [
            "r50",
            "r100",
            "r150",
            "r200",
            "r250",
            "r300",
            "r400",
            "r500",
            "r600",
            "r700",
            "r850",
            "r925",
            "r1000",
        ]

        def __init__(self, cache: bool = True, verbose: bool = True):
            self.arco = ARCO(cache, verbose)

        def __call__(
            self,
            time: datetime | list[datetime] | TimeArray,
            variable: str | list[str] | VariableArray,
        ) -> xr.DataArray:
            """Function to get data.

            Parameters
            ----------
            time : datetime | list[datetime] | TimeArray
                Timestamps to return data for (UTC).
            variable : str | list[str] | VariableArray
                String, list of strings or array of strings that refer to variables to
                return. Must be in IFS lexicon.

            Returns
            -------
            xr.DataArray
            """
            time, variable = prep_data_inputs(time, variable)

            # Replace relative humidity with respective temperature
            # and specifc humidity fields
            variable_expanded = []
            for v in variable:
                if v in self.relative_humidity_ids:
                    level = int(v[1:])
                    variable_expanded.extend([f"t{level}", f"q{level}"])
                else:
                    variable_expanded.append(v)
            variable_expanded = list(set(variable_expanded))

            # Fetch from ARCO
            da_exp = self.arco(time, variable_expanded)

            # Calculate relative humidity when needed
            arrays = []
            for v in variable:
                if v in self.relative_humidity_ids:
                    level = int(v[1:])
                    t = da_exp.sel(variable=f"t{level}").values
                    q = da_exp.sel(variable=f"q{level}").values
                    rh = self.calc_relative_humdity(t, q, 100 * level)
                    arrays.append(rh)
                else:
                    arrays.append(da_exp.sel(variable=v).values)

            da = xr.DataArray(
                data=np.stack(arrays, axis=1),
                dims=["time", "variable", "lat", "lon"],
                coords=dict(
                    time=da_exp.coords["time"].values,
                    variable=np.array(variable),
                    lat=da_exp.coords["lat"].values,
                    lon=da_exp.coords["lon"].values,
                ),
            )
            return da

        def calc_relative_humdity(
            self, temperature: np.array, specific_humidity: np.array, pressure: float
        ) -> np.array:
            """Relative humidity calculation

            Parameters
            ----------
            temperature : np.array
                Temperature field (K)
            specific_humidity : np.array
                Specific humidity field (g.kg-1)
            pressure : float
                Pressure (P)

            Returns
            -------
            np.array
            """
            epsilon = 0.621981
            p = pressure
            q = specific_humidity
            t = temperature

            e = (p * q * (1.0 / epsilon)) / (1 + q * (1.0 / (epsilon) - 1))

            es_w = 611.21 * np.exp(17.502 * (t - 273.16) / (t - 32.19))
            es_i = 611.21 * np.exp(22.587 * (t - 273.16) / (t + 0.7))

            alpha = np.clip((t - 250.16) / (273.16 - 250.16), 0, 1.2) ** 2
            es = alpha * es_w + (1 - alpha) * es_i
            rh = 100 * e / es

            return rh









.. GENERATED FROM PYTHON SOURCE LINES 174-181

:py:func:`__call__` API
~~~~~~~~~~~~~~~~~~~~~~~
The call function is the main API of data source which return the Xarray data array
with the requested data. For this custom data source we intercept relative humidity
variables, replace them with temperature and specific humidity requests then calculate
the relative humidity from these fields. Note that the ARCO data source is handling
the remote complexity, we are just manipulating Numpy arrays

.. GENERATED FROM PYTHON SOURCE LINES 183-191

:py:func:`calc_relative_humdity`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Based on the calculations ECMWF uses in their IFS numerical simulator which accounts
for estimating the water vapor and ice present in the atmosphere.

.. note::
  See reference, equation 7.98 onwards:
  https://www.ecmwf.int/en/elibrary/81370-ifs-documentation-cy48r1-part-iv-physical-processes

.. GENERATED FROM PYTHON SOURCE LINES 193-197

Verification
------------
Before plugging this into our workflow, let's quickly verify our data source is
consistent with when GFS provides for relative humidity.

.. GENERATED FROM PYTHON SOURCE LINES 199-207

.. code-block:: Python

    ds = CustomDataSource()
    da_custom = ds(time=datetime(2022, 1, 1, hour=0), variable=["r500"])

    ds_gfs = GFS()
    da_gfs = ds_gfs(time=datetime(2022, 1, 1, hour=0), variable=["r500"])

    print(da_custom)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Fetching ARCO for 2022-01-01 00:00:00:   0%|          | 0/2 [00:00<?, ?it/s]                                                                                2024-04-18 22:36:46.586 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: q500 at 2022-01-01T00:00:00
    Fetching ARCO for 2022-01-01 00:00:00:   0%|          | 0/2 [00:00<?, ?it/s]    Fetching ARCO for 2022-01-01 00:00:00:  50%|█████     | 1/2 [00:03<00:03,  3.53s/it]                                                                                        2024-04-18 22:36:50.118 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t500 at 2022-01-01T00:00:00
    Fetching ARCO for 2022-01-01 00:00:00:  50%|█████     | 1/2 [00:03<00:03,  3.53s/it]    Fetching ARCO for 2022-01-01 00:00:00: 100%|██████████| 2/2 [00:06<00:00,  3.38s/it]    Fetching ARCO for 2022-01-01 00:00:00: 100%|██████████| 2/2 [00:06<00:00,  3.40s/it]
    2024-04-18 22:36:53.413 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:151 - Fetching GFS index file: 2022-01-01 00:00:00
    Fetching GFS for 2022-01-01 00:00:00:   0%|          | 0/1 [00:00<?, ?it/s]                                                                               2024-04-18 22:36:53.748 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:197 - Fetching GFS grib file for variable: r500 at 2022-01-01 00:00:00
    Fetching GFS for 2022-01-01 00:00:00:   0%|          | 0/1 [00:00<?, ?it/s]    Fetching GFS for 2022-01-01 00:00:00: 100%|██████████| 1/1 [00:00<00:00,  1.45it/s]    Fetching GFS for 2022-01-01 00:00:00: 100%|██████████| 1/1 [00:00<00:00,  1.45it/s]
    <xarray.DataArray (time: 1, variable: 1, lat: 721, lon: 1440)>
    array([[[[ 28.01413468,  28.01413468,  28.01413468, ...,  28.01413468,
               28.01413468,  28.01413468],
             [ 29.75579658,  29.75314258,  29.81191126, ...,  29.77167483,
               29.76636404,  29.76376009],
             [ 31.28908409,  31.28075462,  31.27237381, ...,  31.31699177,
               31.30860053,  31.29746972],
             ...,
             [ 97.36539026,  97.35685903,  97.39891442, ...,  97.34011022,
               97.32321665,  97.31468906],
             [ 97.50236648,  97.49380369,  97.54603948, ...,  97.5280597 ,
               97.51949448,  97.51949448],
             [102.58417544, 102.58417544, 102.58417544, ..., 102.58417544,
              102.58417544, 102.58417544]]]])
    Coordinates:
      * time      (time) datetime64[ns] 2022-01-01
      * variable  (variable) <U4 'r500'
      * lat       (lat) float64 90.0 89.75 89.5 89.25 ... -89.25 -89.5 -89.75 -90.0
      * lon       (lon) float64 0.0 0.25 0.5 0.75 1.0 ... 359.0 359.2 359.5 359.8




.. GENERATED FROM PYTHON SOURCE LINES 208-240

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    fig, ax = plt.subplots(
        1,
        2,
        figsize=(10, 3),
        subplot_kw={"projection": ccrs.Mollweide()},
        constrained_layout=True,
    )

    ax[0].imshow(
        da_custom.sel(variable="r500")[0], transform=ccrs.PlateCarree(), vmin=0, vmax=100
    )
    ax[1].imshow(
        da_gfs.sel(variable="r500")[0], transform=ccrs.PlateCarree(), vmin=0, vmax=100
    )

    ax[0].set_title("Custom ARCO")
    ax[1].set_title("GFS")
    plt.suptitle("r500", fontsize=24)
    cbar = plt.cm.ScalarMappable()
    cbar.set_array(da_custom.sel(variable="r500")[0])
    cbar.set_clim(0, 100)
    cbar = fig.colorbar(cbar, ax=ax[-1], orientation="vertical", shrink=0.8)

    plt.savefig("outputs/custom_datasource_gfs_versus_custom.jpg")





.. image-sg:: /examples/extend/images/sphx_glr_03_custom_datasource_001.png
   :alt: r500, Custom ARCO, GFS
   :srcset: /examples/extend/images/sphx_glr_03_custom_datasource_001.png, /examples/extend/images/sphx_glr_03_custom_datasource_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 241-252

Execute Workflow
----------------
We will use this custom data source to run deterministic inference with a model that
requires relative humidity. :mod:`earth2studio.models.px.FCN` is one such model. Since
we are using ARCO, we can run inference for a time quite far back in time.

Let's instantiate the components needed.

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 254-276

.. code-block:: Python

    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import earth2studio.run as run
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN

    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Create the data source
    data = CustomDataSource()

    # Create the IO handler, store in memory
    io = ZarrBackend()

    nsteps = 4
    io = run.deterministic(["1993-04-05"], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-04-18 22:36:59.864 | INFO     | earth2studio.run:deterministic:68 - Running simple workflow!
    2024-04-18 22:36:59.864 | INFO     | earth2studio.run:deterministic:71 - Inference device: cuda
    Fetching ARCO for 1993-04-05 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                 2024-04-18 22:37:01.489 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching ARCO for 1993-04-05 00:00:00:   4%|▍         | 1/26 [00:04<01:40,  4.01s/it]                                                                                         2024-04-18 22:37:05.498 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u850 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:   4%|▍         | 1/26 [00:04<01:40,  4.01s/it]    Fetching ARCO for 1993-04-05 00:00:00:   8%|▊         | 2/26 [00:14<03:08,  7.85s/it]                                                                                         2024-04-18 22:37:16.043 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z50 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:   8%|▊         | 2/26 [00:14<03:08,  7.85s/it]    Fetching ARCO for 1993-04-05 00:00:00:  12%|█▏        | 3/26 [00:16<01:59,  5.19s/it]                                                                                         2024-04-18 22:37:18.069 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  12%|█▏        | 3/26 [00:16<01:59,  5.19s/it]    Fetching ARCO for 1993-04-05 00:00:00:  15%|█▌        | 4/26 [00:16<01:12,  3.29s/it]                                                                                         2024-04-18 22:37:18.447 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v250 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  15%|█▌        | 4/26 [00:16<01:12,  3.29s/it]    Fetching ARCO for 1993-04-05 00:00:00:  19%|█▉        | 5/26 [00:20<01:10,  3.37s/it]                                                                                         2024-04-18 22:37:21.960 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: sp at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  19%|█▉        | 5/26 [00:20<01:10,  3.37s/it]    Fetching ARCO for 1993-04-05 00:00:00:  23%|██▎       | 6/26 [00:20<00:47,  2.36s/it]                                                                                         2024-04-18 22:37:22.368 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t500 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  23%|██▎       | 6/26 [00:20<00:47,  2.36s/it]    Fetching ARCO for 1993-04-05 00:00:00:  27%|██▋       | 7/26 [00:23<00:48,  2.56s/it]                                                                                         2024-04-18 22:37:25.342 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v10m at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  27%|██▋       | 7/26 [00:23<00:48,  2.56s/it]    Fetching ARCO for 1993-04-05 00:00:00:  31%|███       | 8/26 [00:24<00:33,  1.87s/it]                                                                                         2024-04-18 22:37:25.713 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u500 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  31%|███       | 8/26 [00:24<00:33,  1.87s/it]    Fetching ARCO for 1993-04-05 00:00:00:  35%|███▍      | 9/26 [00:26<00:35,  2.09s/it]                                                                                         2024-04-18 22:37:28.299 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u1000 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  35%|███▍      | 9/26 [00:26<00:35,  2.09s/it]    Fetching ARCO for 1993-04-05 00:00:00:  38%|███▊      | 10/26 [00:29<00:35,  2.24s/it]                                                                                          2024-04-18 22:37:30.857 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v100m at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  38%|███▊      | 10/26 [00:29<00:35,  2.24s/it]    Fetching ARCO for 1993-04-05 00:00:00:  42%|████▏     | 11/26 [00:29<00:24,  1.66s/it]                                                                                          2024-04-18 22:37:31.212 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v500 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  42%|████▏     | 11/26 [00:29<00:24,  1.66s/it]    Fetching ARCO for 1993-04-05 00:00:00:  46%|████▌     | 12/26 [00:32<00:27,  1.95s/it]                                                                                          2024-04-18 22:37:33.830 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u100m at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  46%|████▌     | 12/26 [00:32<00:27,  1.95s/it]    Fetching ARCO for 1993-04-05 00:00:00:  50%|█████     | 13/26 [00:32<00:19,  1.47s/it]                                                                                          2024-04-18 22:37:34.183 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: msl at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  50%|█████     | 13/26 [00:32<00:19,  1.47s/it]    Fetching ARCO for 1993-04-05 00:00:00:  54%|█████▍    | 14/26 [00:33<00:13,  1.14s/it]                                                                                          2024-04-18 22:37:34.551 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  54%|█████▍    | 14/26 [00:33<00:13,  1.14s/it]    Fetching ARCO for 1993-04-05 00:00:00:  58%|█████▊    | 15/26 [00:35<00:16,  1.50s/it]                                                                                          2024-04-18 22:37:36.892 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: q850 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  58%|█████▊    | 15/26 [00:35<00:16,  1.50s/it]    Fetching ARCO for 1993-04-05 00:00:00:  62%|██████▏   | 16/26 [00:38<00:19,  1.90s/it]                                                                                          2024-04-18 22:37:39.737 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t250 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  62%|██████▏   | 16/26 [00:38<00:19,  1.90s/it]    Fetching ARCO for 1993-04-05 00:00:00:  65%|██████▌   | 17/26 [00:40<00:18,  2.01s/it]                                                                                          2024-04-18 22:37:41.985 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z850 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  65%|██████▌   | 17/26 [00:40<00:18,  2.01s/it]    Fetching ARCO for 1993-04-05 00:00:00:  69%|██████▉   | 18/26 [00:42<00:15,  1.92s/it]                                                                                          2024-04-18 22:37:43.701 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v850 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  69%|██████▉   | 18/26 [00:42<00:15,  1.92s/it]    Fetching ARCO for 1993-04-05 00:00:00:  73%|███████▎  | 19/26 [00:45<00:15,  2.24s/it]                                                                                          2024-04-18 22:37:46.690 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  73%|███████▎  | 19/26 [00:45<00:15,  2.24s/it]    Fetching ARCO for 1993-04-05 00:00:00:  77%|███████▋  | 20/26 [00:45<00:10,  1.68s/it]                                                                                          2024-04-18 22:37:47.055 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u250 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  77%|███████▋  | 20/26 [00:45<00:10,  1.68s/it]    Fetching ARCO for 1993-04-05 00:00:00:  81%|████████  | 21/26 [00:48<00:09,  1.94s/it]                                                                                          2024-04-18 22:37:49.616 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: u10m at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  81%|████████  | 21/26 [00:48<00:09,  1.94s/it]    Fetching ARCO for 1993-04-05 00:00:00:  85%|████████▍ | 22/26 [00:48<00:05,  1.47s/it]                                                                                          2024-04-18 22:37:49.979 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: q500 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  85%|████████▍ | 22/26 [00:48<00:05,  1.47s/it]    Fetching ARCO for 1993-04-05 00:00:00:  88%|████████▊ | 23/26 [00:50<00:05,  1.67s/it]                                                                                          2024-04-18 22:37:52.130 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  88%|████████▊ | 23/26 [00:50<00:05,  1.67s/it]    Fetching ARCO for 1993-04-05 00:00:00:  92%|█████████▏| 24/26 [00:52<00:03,  1.74s/it]                                                                                          2024-04-18 22:37:54.026 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z250 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  92%|█████████▏| 24/26 [00:52<00:03,  1.74s/it]    Fetching ARCO for 1993-04-05 00:00:00:  96%|█████████▌| 25/26 [00:54<00:01,  1.80s/it]                                                                                          2024-04-18 22:37:55.961 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: v1000 at 1993-04-05T00:00:00
    Fetching ARCO for 1993-04-05 00:00:00:  96%|█████████▌| 25/26 [00:54<00:01,  1.80s/it]    Fetching ARCO for 1993-04-05 00:00:00: 100%|██████████| 26/26 [00:56<00:00,  2.00s/it]    Fetching ARCO for 1993-04-05 00:00:00: 100%|██████████| 26/26 [00:56<00:00,  2.19s/it]
    2024-04-18 22:37:58.568 | SUCCESS  | earth2studio.run:deterministic:82 - Fetched data from CustomDataSource
    2024-04-18 22:37:58.591 | INFO     | earth2studio.run:deterministic:104 - Inference starting!
    Running inference:   0%|          | 0/5 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:00<00:02,  1.57it/s]    Running inference:  40%|████      | 2/5 [00:01<00:02,  1.41it/s]    Running inference:  60%|██████    | 3/5 [00:02<00:01,  1.34it/s]    Running inference:  80%|████████  | 4/5 [00:02<00:00,  1.31it/s]    Running inference: 100%|██████████| 5/5 [00:03<00:00,  1.25it/s]    Running inference: 100%|██████████| 5/5 [00:03<00:00,  1.30it/s]
    2024-04-18 22:38:02.428 | SUCCESS  | earth2studio.run:deterministic:112 - Inference complete
    /
     ├── lat (720,) float64
     ├── lead_time (5,) timedelta64[h]
     ├── lon (1440,) float64
     ├── msl (1, 5, 720, 1440) float32
     ├── r500 (1, 5, 720, 1440) float32
     ├── r850 (1, 5, 720, 1440) float32
     ├── sp (1, 5, 720, 1440) float32
     ├── t250 (1, 5, 720, 1440) float32
     ├── t2m (1, 5, 720, 1440) float32
     ├── t500 (1, 5, 720, 1440) float32
     ├── t850 (1, 5, 720, 1440) float32
     ├── tcwv (1, 5, 720, 1440) float32
     ├── time (1,) datetime64[ns]
     ├── u1000 (1, 5, 720, 1440) float32
     ├── u100m (1, 5, 720, 1440) float32
     ├── u10m (1, 5, 720, 1440) float32
     ├── u250 (1, 5, 720, 1440) float32
     ├── u500 (1, 5, 720, 1440) float32
     ├── u850 (1, 5, 720, 1440) float32
     ├── v1000 (1, 5, 720, 1440) float32
     ├── v100m (1, 5, 720, 1440) float32
     ├── v10m (1, 5, 720, 1440) float32
     ├── v250 (1, 5, 720, 1440) float32
     ├── v500 (1, 5, 720, 1440) float32
     ├── v850 (1, 5, 720, 1440) float32
     ├── z1000 (1, 5, 720, 1440) float32
     ├── z250 (1, 5, 720, 1440) float32
     ├── z50 (1, 5, 720, 1440) float32
     ├── z500 (1, 5, 720, 1440) float32
     └── z850 (1, 5, 720, 1440) float32




.. GENERATED FROM PYTHON SOURCE LINES 277-281

Post Processing
---------------
To confirm that our model is working as expected, we will plot the total column water
vapor field for a few time-steps.

.. GENERATED FROM PYTHON SOURCE LINES 283-306

.. code-block:: Python

    forecast = "1993-04-05"
    variable = "tcwv"

    plt.close("all")

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(2, 2, figsize=(6, 4))

    # Plot tcwv every 6 hours
    ax[0, 0].imshow(io[variable][0, 0], vmin=0, vmax=80, cmap="magma")
    ax[0, 1].imshow(io[variable][0, 1], vmin=0, vmax=80, cmap="magma")
    ax[1, 0].imshow(io[variable][0, 2], vmin=0, vmax=80, cmap="magma")
    ax[1, 1].imshow(io[variable][0, 3], vmin=0, vmax=80, cmap="magma")

    # Set title
    plt.suptitle(f"{variable} - {forecast}")
    times = io["lead_time"].astype("timedelta64[h]").astype(int)
    ax[0, 0].set_title(f"Lead time: {times[0]}hrs")
    ax[0, 1].set_title(f"Lead time: {times[1]}hrs")
    ax[1, 0].set_title(f"Lead time: {times[2]}hrs")
    ax[1, 1].set_title(f"Lead time: {times[3]}hrs")

    plt.savefig("outputs/custom_datasource_prediction.jpg", bbox_inches="tight")



.. image-sg:: /examples/extend/images/sphx_glr_03_custom_datasource_002.png
   :alt: tcwv - 1993-04-05, Lead time: 0hrs, Lead time: 6hrs, Lead time: 12hrs, Lead time: 18hrs
   :srcset: /examples/extend/images/sphx_glr_03_custom_datasource_002.png, /examples/extend/images/sphx_glr_03_custom_datasource_002_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 28.624 seconds)


.. _sphx_glr_download_examples_extend_03_custom_datasource.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_custom_datasource.ipynb <03_custom_datasource.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_custom_datasource.py <03_custom_datasource.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
